# web-service-data-platform

./: .env.example  .gitignore  README.md  backend.sh  config.sh  frontend.sh  main.py  pyproject.toml
backend/: main.py
backend/app/: coingecko.ipynb  models.py
backend/app/auth/: jwt_utils.py  routes.py
backend/app/config/: config.py  config_example.py
backend/app/database/: database.py
backend/app/dependencies/: auth.py  services.py
backend/app/models/: models_data.py  models_user.py  mongo_logger.py
backend/app/routers/: auth.py  etl.py  users.py
backend/app/services/: data_service.py  user_service.py
frontend/: Dockerfile  angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.config.ts  app.css  app.routes.ts  app.ts
frontend/src/app/guards/: admin-guard.ts
frontend/src/app/interceptors/: auth-interceptor.ts
frontend/src/app/login/: login.html
frontend/src/app/models/: stock.models.ts  user.models.ts
frontend/src/app/pages/dashboard/: dashboard.css  dashboard.html  dashboard.ts
frontend/src/app/pages/dashboard-admin/: dashboard-admin.css  dashboard-admin.html  dashboard-admin.spec.ts  dashboard-admin.ts
frontend/src/app/pages/login/: login.css  login.html  login.ts
frontend/src/app/pages/register/: register.css  register.html  register.ts
frontend/src/app/services/: auth.ts  stock.service.ts
frontend/src/environments/: environment.production.ts
